--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -651,14 +651,15 @@
     <string name="driver_to_customer">டிரைவர் குறிக்கின்ற வாடிக்கையாளர்</string>
     <string name="driver_to_driver">டிரைவர் குறிக்கின்ற டிரைவர்</string>
     <string name="rate_card">விலை அட்டை</string>
-    <string name="applicable_after">Applicable after %1$s Kms</string>
+    <string name="applicable_after">பொருந்தக்கூடிய பின்னர்  %1$s Kms</string>
     <string name="distance_per_km">தூரம்\n(நிமிடம் ஒன்றுக்கு)</string>
     <string name="per_km">(நிமிடம் ஒன்றுக்கு)</string>
     <string name="delivery_off">Delivery OFF</string>
 
-    <string name="Yesterday">Yesterday</string>
-    <string name="ride_money">Ride Money</string>
-    <string name="total_amount">Total Amount</string>
+    <string name="Yesterday">நேற்று</string>
+    <string name="ride_money">மொத்த சவாரி தொகை</string>
+    <string name="total_amount">இறுதி விலைப்பட்டியல் தொகை</string>
+    <string name="this_week">இந்த வாரம்</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
