--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -627,14 +627,15 @@
     <string name="driver_to_customer">కస్టమర్ డ్రైవర్</string>
     <string name="driver_to_driver">డ్రైవర్ డ్రైవర్</string>
     <string name="rate_card">రేటు కార్డ్</string>
-    <string name="applicable_after">Applicable after %1$s Kms</string>
+    <string name="applicable_after">వర్తించే తర్వాత  %1$s Kms</string>
     <string name="distance_per_km">దూరం\n(కనీసం ప్రతి)</string>
     <string name="per_km">(కనీసం ప్రతి)</string>
     <string name="delivery_off">Delivery OFF</string>
 
-    <string name="Yesterday">Yesterday</string>
-    <string name="ride_money">Ride Money</string>
-    <string name="total_amount">Total Amount</string>
+    <string name="Yesterday">ನಿನ್ನೆ</string>
+    <string name="ride_money">మొత్తం రైడ్ మొత్తం</string>
+    <string name="total_amount">ఫైనల్ ఇన్వాయిస్ మొత్తం</string>
+    <string name="this_week">ఈ వారం</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
