--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -634,6 +634,7 @@
 	<string name="ride_money">कुल सवारी राशि </string>
 	<string name="total_amount">अंतिम चालान राशि</string>
 	<string name="this_week">इस सप्ताह</string>
+	<string name="outstanding_amount1">Outstanding Adjusted</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
