--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -599,6 +599,7 @@
     <string name="ride_money">ಸವಾರಿಯ ಒಟ್ಟು ಮೊತ್ತ </string>
     <string name="total_amount">ಅಂತಿಮ ಸರಕುಪಟ್ಟಿಯ ಮೊತ್ತ </string>
     <string name="this_week">ಈ ವಾರ</string>
+    <string name="outstanding_amount1">Outstanding Adjusted</string>
 
 
     <string-array name="CountryCodes" >
