--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -636,6 +636,7 @@
 	<string name="ride_money">Total ride amount</string>
 	<string name="total_amount">Final invoice amount</string>
 	<string name="this_week">This Week</string>
+	<string name="outstanding_amount1">Outstanding Adjusted</string>
 
 
 	<string-array name="CountryCodes" >
