--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -99,7 +99,7 @@
 	<string name="update">अपडेट</string>
 
 	<string name="driver_mode">ड्राइवर मोड</string>
-	<string name="jugnoo_on">Jugnoo ON</string>
+	<string name="jugnoo_on">Jugnoo ऑन है</string>
 	<string name="driver_type">राइवर प्ररूप</string>
 	<string name="ride_type"> राइड  टाइप</string>
 	<string name="invite_friends">मित्रों को आमंत्रित करें</string>
@@ -249,7 +249,7 @@
 
 	<string name="jugnoo_cash">Jugnoo Cash</string>
 	<string name="jugnoo">Jugnoo</string>
-	<string name="jugnoo_off">Jugnoo बंद है।</string>
+	<string name="jugnoo_off">Jugnoo बंद है</string>
 	<string name="jugnoo_cut">Jugnoo कटौती</string>
 
 	<string name="loading">लोड हो रहा है ...</string>
@@ -559,7 +559,7 @@
 	<string name="cancelled">रद्द हो गयी / गया</string>
 	<string name="address">पता</string>
 	<string name="delivered">पहुंचा दिया</string>
-	<string name="delivery_on">डिलिवरी पर</string>
+	<string name="delivery_on">डिलिवरी ऑन है</string>
 	<string name="delivery_is_over">डिलीवरी समाप्त हो गयी है </string>
 	<string name="start_the_delivery">सवारी शुरू</string>
 	<string name="deliver_order_number">डिलीवरी ऑर्डर नंबर %s</string>
@@ -625,16 +625,16 @@
 	<string name="driver_to_customer">ड्राइवर टू कस्टमर</string>
 	<string name="driver_to_driver">ड्राइवर टू ड्राइवर</string>
 	<string name="rate_card">रेट कार्ड</string>
-	<string name="applicable_after">Applicable after %1$s Kms</string>
+	<string name="applicable_after"> %1$s कि.मी. के बाद लागू </string>
 	<string name="distance_per_km">दूरी\n(प्रति मिनट)</string>
 	<string name="per_km">(प्रति मिनट)</string>
-	<string name="delivery_off">Delivery OFF</string>
+	<string name="delivery_off">डिलिवरी बंद है</string>
 
 	<string name="Yesterday">कल</string>
 	<string name="ride_money">कुल सवारी राशि </string>
 	<string name="total_amount">अंतिम चालान राशि</string>
 	<string name="this_week">इस सप्ताह</string>
-	<string name="outstanding_amount1">Outstanding Adjusted</string>
+	<string name="outstanding_amount1">बकाया समायोजित किया गया</string>
 	<string name="upload_again">Upload Again</string>
 
 	<string-array name="CountryCodes" >
