--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -636,7 +636,7 @@
     <string name="ride_money">మొత్తం రైడ్ మొత్తం</string>
     <string name="total_amount">ఫైనల్ ఇన్వాయిస్ మొత్తం</string>
     <string name="this_week">ఈ వారం</string>
-    <string name="outstanding_amount1">Outstanding Adjusted</string>
+    <string name="outstanding_amount1">బాకీ మొత్తం సర్దుబాటు చేయబడింది</string>
     <string name="upload_again">Upload Again</string>
 
     <string-array name="CountryCodes" >
