old_registeration_merge: UI changes and update logic

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -576,6 +576,7 @@
     <string name="this_week">આ અઠવાડિયે</string>
     <string name="outstanding_amount1">બાદ બાકી થઇ ગયું </string>
     <string name="upload_again">Upload Again</string>
+    <string name="self_enroled">Self Enroled</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
