--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -580,6 +580,7 @@
     <string name="this_week">এই সপ্তাহ</string>
     <string name="outstanding_amount1">আগৰ বাকি এদজাষ্ট কৰা হল</string>
     <string name="upload_again">Upload Again</string>
+    <string name="self_enroled">Self Enroled</string>
 
     <string-array name="CountryCodes" >
 
