--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -636,6 +636,7 @@
 	<string name="this_week">इस सप्ताह</string>
 	<string name="outstanding_amount1">बकाया समायोजित किया गया</string>
 	<string name="upload_again">Upload Again</string>
+	<string name="self_enroled">Self Enroled</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
