--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -662,6 +662,7 @@
     <string name="this_week">இந்த வாரம்</string>
     <string name="outstanding_amount1">நிலுவையில் உள்ள தொகை சரி செய்ய பட்டது </string>
     <string name="upload_again">Upload Again</string>
+    <string name="self_enroled">Self Enroled</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
