--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -638,6 +638,7 @@
 	<string name="this_week">This Week</string>
 	<string name="outstanding_amount1">Outstanding Adjusted</string>
 	<string name="upload_again">Upload Again</string>
+	<string name="self_enroled">Self Enroled</string>
 
 
 	<string-array name="CountryCodes" >
