--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -639,6 +639,7 @@
     <string name="outstanding_amount1">బాకీ మొత్తం సర్దుబాటు చేయబడింది</string>
     <string name="upload_again">Upload Again</string>
     <string name="self_enroled">Self Enroled</string>
+    <string name="register_via_agent">Register Via Agent</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
