--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -637,6 +637,7 @@
 	<string name="outstanding_amount1">बकाया समायोजित किया गया</string>
 	<string name="upload_again">Upload Again</string>
 	<string name="self_enroled">Self Enroled</string>
+	<string name="register_via_agent">Register Via Agent</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
