--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -585,6 +585,7 @@
     <string name="outstanding_amount1">ରହିଯାଇଥିବା ରାଶି ଆଡ୍-ଜଷ୍ଟ୍ କରି ଦିଆ ଯାଇଛି</string>
     <string name="upload_again">Upload Again</string>
     <string name="self_enroled">Self Enroled</string>
+    <string name="register_via_agent">Register Via Agent</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
