--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -576,6 +576,9 @@
     <string name="this_week">આ અઠવાડિયે</string>
     <string name="outstanding_amount1">બાદ બાકી થઇ ગયું </string>
     <string name="upload_again">Upload Again</string>
+    <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \\u20B9 %2$s per
+        Km
+    </string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
