--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -601,6 +601,9 @@
     <string name="this_week">ಈ ವಾರ</string>
     <string name="outstanding_amount1">ಮಹೋನ್ನತ ಹೊಂದಾಣಿಕೆ ಮಾಡಲಾಗಿದೆ </string>
     <string name="upload_again">Upload Again</string>
+    <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be \\u20B9 %2$s per
+        Km
+    </string>
 
 
     <string-array name="CountryCodes" >
