--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -42,8 +42,7 @@
 
 
 
-
-	    <!-- \n\nPeople with autos can offer rides to users who find taxis a bit too expensive. -->
+	<!-- \n\nPeople with autos can offer rides to users who find taxis a bit too expensive. -->
 
 	<string name="about_1_text">Jugnoo helps you provide a friendly and affordable ride within the Chandigarh tricity area.\nThe rates are affordable, and definitely a good deal when you get them for a friendly ride.</string>
 	<string name="about_2_text">Rate card</string>
@@ -638,6 +637,7 @@
 	<string name="this_week">This Week</string>
 	<string name="outstanding_amount1">Outstanding Adjusted</string>
 	<string name="upload_again">Upload Again</string>
+	<string name="diffrential_pricing_rate">After %1$sKm, distance charge will be \u20B9 %2$s/Km </string>
 
 
 	<string-array name="CountryCodes" >
