--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -603,6 +603,7 @@
     <string name="upload_again">Upload Again</string>
     <string name="self_enroled">Self Enroled</string>
     <string name="register_via_agent">Register Via Agent</string>
+    <string name="upload_Documents">Upload Documents</string>
 
 
     <string-array name="CountryCodes" >
