--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -585,6 +585,7 @@
     <string name="register_via_agent">Register Via Agent</string>
     <string name="upload_Documents">Upload Documents</string>
     <string name="last_trip_earning">Last Trip Driver’s Earnings</string>
+    <string name="referral_code">Referral Code</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
