--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -648,13 +648,20 @@
 	<string name="left">Left</string>
 	<string name="right">Right</string>
 	<string name="Audit">AUDIT</string>
-	<string name="non_jugnoo_auto_branding">Non Jugnoo Auto Branding</string>
-	<string name="non_jugnoo_auto_audit">Non Jugnoo Auto Audit</string>
+	<string name="non_jugnoo_auto_branding">NON JUGNOO AUTO BRANDING</string>
+	<string name="non_jugnoo_auto_audit">NON JUGNOO AUTO AUDIT</string>
 	<string name="auto_from_front">Auto From Front</string>
 	<string name="auto_from_back">Auto From Back</string>
 	<string name="auto_from_left">Auto From Left</string>
 	<string name="auto_from_right">Auto From Right</string>
 	<string name="mobile_stand">Mobile Stand (Optional)</string>
+	<string name="vehicle_number">Vehicle Number</string>
+	<string name="mobile_stand_non">Mobile Stand</string>
+	<string name="next">Next</string>
+	<string name="tap_to_capturing_photos">Tap on NEXT to start capturing auto photos</string>
+	<string name="has_smart_phone">The driver has a smart phone</string>
+	<string name="optional_brack">(Optional)</string>
+	<string name="self_audit_caps">SELF AUDIT</string>
 
 
 	<string-array name="CountryCodes" >
