--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -658,6 +658,9 @@
 	<string name="tap_to_capturing_photos">Tap on NEXT to start capturing auto photos</string>
 	<string name="has_smart_phone">The driver has a smart phone</string>
 	<string name="self_audit_caps">SELF AUDIT</string>
+	<string name="audit_required">Audit Required</string>
+	<string name="in_progress">In Progress</string>
+	<string name="request_pending">Request Pending</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
