--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -606,6 +606,7 @@
     <string name="upload_Documents">Upload Documents</string>
     <string name="last_trip_earning">Last Trip Driver’s Earnings</string>
     <string name="diffrential_pricing_rate">%1$s ಕಿಲೋಮೀಟರ್  ನಂತರ, ಪ್ರತಿ ಕಿಲೋಮೀಟರಿಗೆ ರೂ. \u20B9 %2$s ಸಿಗುತ್ತದೆ</string>
+    <string name="payment_sent">Payment Sent</string>
 
 
     <string-array name="CountryCodes" >
