--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -666,6 +666,9 @@
 	<string name="in_progress">In Progress</string>
 	<string name="request_pending">Request Pending</string>
 	<string name="name_cant_empty">Name can\'t be empty</string>
+	<string name="please_submit">Please Submit</string>
+	<string name="cancel_audit">Are you sure you want to cancel audit?</string>
+	<string name="image_upload_failed">Image uploading failed, please try again</string>
 
 
 	<string-array name="CountryCodes" >
