feature_self_audit: login flags and gif popup

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -609,6 +609,7 @@
     <string name="please_submit">Please Submit</string>
     <string name="cancel_audit">Are you sure you want to cancel audit?</string>
     <string name="image_upload_failed">Image uploading failed, please try again</string>
+    <string name="audit_lower">Audit</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
